installed framer motion

--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dhaiwat10/react-link-preview": "1.14.2",
     "@types/react-scroll": "^1.8.6",
+    "framer-motion": "^10.6.0",
+    "http-proxy-middleware": "^2.0.6",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/node": "18.15.3",
