--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@dhaiwat10/react-link-preview": "1.14.2",
     "@types/react-scroll": "^1.8.6",
+    "@types/react-slick": "^0.23.10",
     "framer-motion": "^10.6.0",
     "http-proxy-middleware": "^2.0.6",
     "next": "13.2.4",
@@ -19,6 +20,8 @@
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
