--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@dhaiwat10/react-link-preview": "1.14.2",
+    "@types/nodemailer": "^6.4.7",
     "@types/react-scroll": "^1.8.6",
     "@types/react-slick": "^0.23.10",
+    "axios": "^1.3.4",
     "framer-motion": "^10.6.0",
     "http-proxy-middleware": "^2.0.6",
+    "mailgun-js": "^0.22.0",
     "next": "13.2.4",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
