--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "http-proxy-middleware": "^2.0.6",
     "mailgun-js": "^0.22.0",
     "next": "13.2.4",
-    "nodemailer": "^6.9.1",
+    "nodemailer": "5.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
